--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,16 @@ dependencies {
     //Mk video
     implementation 'com.github.khizar1556.MKVideoPlayer:mkvideoplayer:0.1.5'
     implementation 'com.google.android.material:material:1.1.0-alpha10'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'androidx.preference:preference:1.1.0-rc01'
+    implementation 'com.google.android.gms:play-services-auth:17.0.0'
+    implementation 'com.hbb20:ccp:2.4.0'
+    implementation 'com.google.android.gms:play-services-ads:19.2.0'
+    implementation 'com.google.android.gms:play-services-auth-api-phone:17.3.0'
+    implementation 'com.google.android.gms:play-services-base:17.1.0'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+    implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
 }
