--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,10 +36,10 @@ dependencies {
     implementation 'androidx.preference:preference:1.1.0-rc01'
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
     implementation 'com.hbb20:ccp:2.4.0'
-    implementation 'com.google.android.gms:play-services-ads:19.2.0'
     implementation 'com.google.android.gms:play-services-auth-api-phone:17.3.0'
     implementation 'com.google.android.gms:play-services-base:17.1.0'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
+    implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0'
 }
