--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,9 @@ dependencies {
     implementation "androidx.cardview:cardview:1.0.0"
     //Mk video
     implementation 'com.github.khizar1556.MKVideoPlayer:mkvideoplayer:0.1.5'
+    //video picker
+    implementation 'net.alhazmy13.MediaPicker:libary:2.4.4'
     implementation 'com.google.android.material:material:1.1.0-alpha10'
-
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'androidx.preference:preference:1.1.0-rc01'
@@ -42,4 +43,6 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
     implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0'
+    //pdf
+    implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
 }
