--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.igrandbusiness.mybusinessplans">
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,26 +14,39 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ProfileActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".Podcasts"></activity>
+        <activity android:name=".Magazines" />
+        <activity
+            android:name=".ProfileActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".settings.SettingsActivity" />
-        <activity android:name=".CodeVerification"
+        <activity
+            android:name=".CodeVerification"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ChangePhone"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ChangePassword"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ForgotPassword"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".LoginActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".SignUpActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".VideosList"
             android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".ChangePhone"
+        <activity android:name=".AudioPlayer"
             android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".ChangePassword"
+        <activity android:name=".VideoPlayer"
             android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".ForgotPassword"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".LoginActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".SignUpActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".VideosList" />
-        <activity android:name=".AudioPlayer"/>
-        <activity android:name=".VideoPlayer" />
-        <activity android:name=".ViewPDF"
-            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name=".ViewPDF"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
@@ -41,9 +56,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <service
-            android:enabled="true"
-            android:name="com.igrandbusiness.mybusinessplans.BackgroundSoundService" />
+            android:name=".BackgroundSoundService"
+            android:enabled="true" />
     </application>
 
 </manifest>
