--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.igrandbusiness.mybusinessplans">
-
+    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
@@ -14,8 +14,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".Podcasts"></activity>
-        <activity android:name=".Magazines" />
+        <activity android:name=".Podcasts"
+            android:label="Podcasts"/>
+        <activity android:name=".Magazines"
+            android:label="Magazines"/>
         <activity
             android:name=".ProfileActivity"
             android:theme="@style/AppTheme.NoActionBar" />
@@ -40,13 +42,11 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".VideosList"
             android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".AudioPlayer"
-            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".AudioPlayer"/>
         <activity android:name=".VideoPlayer"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:label="Videos"/>
         <activity
-            android:name=".ViewPDF"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:name=".ViewPDF" />
         <activity
             android:name=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
@@ -57,9 +57,6 @@
             </intent-filter>
         </activity>
 
-        <service
-            android:name=".BackgroundSoundService"
-            android:enabled="true" />
     </application>
 
 </manifest>
