--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -20,7 +21,8 @@
             android:name=".ProfileActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".settings.SettingsActivity"
-            android:label="Settings"/>
+            android:label="Settings"
+            android:parentActivityName=".ProfileActivity"/>
         <activity
             android:name=".CodeVerification"
             android:theme="@style/AppTheme.NoActionBar" />
@@ -56,7 +58,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <service android:name=".ExampleService"/>
     </application>
 
 </manifest>
