--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,8 @@ dependencies {
     implementation 'androidx.media:media:1.1.0'
     //carrousel
     implementation 'com.synnapps:carouselview:0.1.5'
+    //fb
+    implementation 'com.facebook.android:audience-network-sdk:6.+'
+    //youtube
+    implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:10.0.5'
 }
